# rustmonitor

./: README.md
client/: Cargo.toml
client/client/docs/: README.md
client/client/scripts/: flash.sh
client/src/: main.rs
gui/Py_QML_gui/: main.py  main.qml
gui/QML_gui/: CMakeLists.txt  main.cpp
gui/gui_1/: form.ui  ui_form.py
misc/client/.devcontainer/: devcontainer.json
misc/client/src/: main.rs
misc/server/: Cargo.toml
misc/server/.devcontainer/: devcontainer.json
misc/server/docs/: README.md
misc/server/scripts/: flash.sh
no_std_client/: Cargo.toml
no_std_client/scripts/: flash.sh
no_std_client/src/: main.rs
no_std_client2/: Cargo.toml
no_std_client2/src/: main.rs
no_std_client3/: Cargo.toml
no_std_client3/.devcontainer/: devcontainer.json
no_std_client3/docs/: README.md
no_std_client3/src/: main.rs
no_std_client4/: Cargo.toml
no_std_client4/src/: main.rs
no_std_server/: Cargo.toml
no_std_server/.devcontainer/: devcontainer.json
no_std_server/docs/: README.md
no_std_server/scripts/: flash.sh
no_std_server/src/: main.rs
