[package]
name = "client"
version = "0.1.0"
authors = ["Tiarban <tiarnanryan13@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "client"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36.1", features = ["binstart"] } #updated
#esp-idf-svc = "0.43.4" # unnecessary
esp-idf-hal = "0.45.2"  # updated from crates.io
embedded-hal = "1.0.0"  # updated
embedded-svc = "0.28.1" # updated
anyhow = "1.0.95" # added for integration with wifi template code
heapless = "0.8.0" # needed because wifi config expects heapless strings as args

[build-dependencies]
embuild = "0.33"
